--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ TEST_API_SECRET=secret_test_xyz789
 TEST_MODE=false
 TEST_PAYMENT_SUCCESS=true
 TEST_PROCESSING_DELAY=1000
+NODE_ENV=development
+CORS_ORIGINS=http://localhost:3000,http://localhost:3001
+LOG_LEVEL=debug
